<resources>
    <string name="app_name">Neosoft Assesment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Fragment User info-->
    <string name="your_info_text">Your Info</string>
    <string name="education_container_text">Education</string>
    <string name="yearofpassing_container_text">Year of Passing</string>
    <string name="grade_text">Grade</string>
    <string name="tv_professional_Info_text">Professional Info</string>
    <string name="Experience_text">Experience</string>
    <string name="designation_container_text">Designation</string>
    <string name="domain_container_text">Domain</string>
    <string name="previous_btn_text">Previous</string>
    <string name="next_btn_text">Next</string>

    <string name="address_text">Address</string>
    <string name="landmark_text">LandMark</string>
    <string name="City_text">City</string>
    <string name="state_container_text">State</string>
    <string name="postcode_text">Post Code</string>
    <string name="tv_youraddress_text">Your Address</string>
    <string name="submit_btn_text">Submit</string>
    <string name="rb_female_text">Female</string>
    <string name="rb_male_text">Male</string>
    <string name="et_gender_text">Gender</string>
    <string name="tv_Register_text">Register</string>
    <string name="et_confirm_password_text">Confirm Password</string>
    <string name="et_password_text">Password</string>
    <string name="et_email_text">Email</string>
    <string name="et_phone_text">Phone Number</string>
    <string name="et_lastname_text">Last Name</string>
    <string name="et_firstname_text">First Name</string>
    <string name="error_login_sign_up_email_field_invalid">Enter Valid Email</string>
    <string name="error_login_sign_up_email_field_empty">Email Can\'t be Empty</string>
    <string name="error_sign_up_name_field_empty">First Name Can\'t be Empty</string>
    <string name="length_of_first_name">First Name should be atleast 3 character</string>
    <string name="length_of_last_name">Last Name should be atleast 3 character</string>
    <string name="last_name_empty">Last Name Can\'t be Empty</string>
    <string name="length_of_password">Password should be atleast 8 character</string>
    <string name="password_uppercase">Password must Contain one Upper-Case Character</string>
    <string name="password_lowercase">Must Contain one Lower-Case Character</string>
    <string name="password_character"><![CDATA[Must Contain one Special Character (@#\\$%^&+=)]]></string>
    <string name="must_be_10_digit">Must be 10 Digit</string>
    <string name="phone_not_null">phone Number Can\'t be Empty</string>
    <string name="cofirmPassword_empty">Confirm Password Can\'t be Empty</string>
    <string name="confirmPassword_doesnt_match">Password didn\'t match</string>
    <string name="password_empty">Password Can\'t be Empty</string>
    <string name="mustbedigit">Must be 10 Digit</string>
    <string name="minimum_six_number_required">Minimum 6 Number Required</string>
    <string name="postcode_empty">Post Code can\'t be empty</string>
    <string name="length_of_landmark">LandMark should be atleast 3 character</string>
    <string name="length_of_address">Address should be atleast 3 character</string>
    <string name="address_not_null">Address can\'t be Empty</string>
    <string name="landmark_not_null">LandMark can\'t be Empty</string>
</resources>