<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/scroll_view_margin_bottom">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            tools:context=".utils.MainActivity">

            <TextView
                android:id="@+id/tv_yourInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_info_text"
                android:textColor="@color/black"
                android:layout_marginTop="@dimen/tv_yourInfo_margin_top"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textSize="@dimen/tv_yourInfo_text_size"/>

            <TextView
                android:id="@+id/tv_educationalInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Educational Info"
                android:textColor="@color/black"
                android:layout_marginTop="@dimen/tv_educationalInfo_margin_top"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="@dimen/tv_educationalInfo_margin_start"
                app:layout_constraintTop_toBottomOf="@+id/tv_yourInfo"
                android:textSize="@dimen/tv_educationalInfo_text_size"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/education_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/education_container_margin_horizontal"
                app:layout_constraintTop_toBottomOf="@id/tv_educationalInfo"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="@dimen/education_container_margin_top"
                android:hint="@string/education_container_text"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

                <AutoCompleteTextView
                    android:id="@+id/education"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    tools:ignore="MissingConstraints" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/yearofpassing_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/yearofpassing_container_margin_horizontal"
                app:layout_constraintTop_toBottomOf="@id/education_container"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="@dimen/yearofpassing_container_margin_top"
                android:hint="@string/yearofpassing_container_text"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

            <AutoCompleteTextView
                android:id="@+id/yearofpassing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                tools:ignore="MissingConstraints" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/grade_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
                android:layout_marginTop="@dimen/grade_container_margin_top"
                android:layout_marginHorizontal="@dimen/grade_container_margin_horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/yearofpassing_container"
                app:startIconTint="@color/black">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/grade"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:lines="@integer/grade_lines"
                    android:hint="@string/grade_text"
                    android:inputType="textCapCharacters"/>
            </com.google.android.material.textfield.TextInputLayout>


            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#ECE9E9"
                android:layout_marginTop="15dp"
                android:layout_marginHorizontal="@dimen/grade_container_margin_horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/grade_container"/>


            <TextView
                android:id="@+id/tv_professional_Info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_professional_Info_text"
                android:textColor="@color/black"
                android:layout_marginTop="@dimen/tv_professional_Info_margin_top"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="@dimen/tv_professional_Info_margin_start"
                app:layout_constraintTop_toBottomOf="@+id/view"
                android:textSize="@dimen/tv_professional_Info_text_size"/>



            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/exp_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
                android:layout_marginTop="@dimen/exp_container_margin_top"
                android:layout_marginHorizontal="@dimen/exp_container_margin_horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_professional_Info"
                app:startIconTint="@color/black">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/exp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:lines="@integer/exp_lines"
                    android:hint="@string/Experience_text"
                    android:inputType="number"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/designation_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/designation_container_margin_horizontal"
                app:layout_constraintTop_toBottomOf="@id/exp_container"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="@dimen/designation_container_margin_top"
                android:hint="@string/designation_container_text"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

                <AutoCompleteTextView
                    android:id="@+id/designation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    tools:ignore="MissingConstraints" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/domain_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/domain_container_margin_horizontal"
                app:layout_constraintTop_toBottomOf="@id/designation_container"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="@dimen/domain_container_margin_top"
                android:hint="@string/domain_container_text"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

                <AutoCompleteTextView
                    android:id="@+id/domain"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    tools:ignore="MissingConstraints" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/previous_btn"
                android:layout_width="160dp"
                android:layout_height="60dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/domain_container"
                android:layout_marginTop="@dimen/previous_btn_margin_top"
                android:text="@string/previous_btn_text"
                app:cornerRadius="0dp"
                android:textColor="@color/white"
                android:textSize="@dimen/previous_btn_text_size"
                android:layout_marginStart="@dimen/previous_btn_margin_start"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/next_btn"
                android:layout_width="160dp"
                android:layout_height="60dp"
                app:cornerRadius="0dp"
                app:layout_constraintStart_toEndOf="@id/previous_btn"
                app:layout_constraintTop_toBottomOf="@id/domain_container"
                android:layout_marginTop="@dimen/next_btn_margin_top"
                android:text="@string/next_btn_text"
                android:textColor="@color/white"
                android:textSize="@dimen/next_btn_text_size"
                android:layout_marginStart="@dimen/next_btn_margin_start"/>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>