<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/scroll_view_margin_bottom">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".utils.MainActivity">
            <TextView
                android:id="@+id/tv_Register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_Register_text"
                android:textColor="@color/black"
                android:layout_marginTop="@dimen/tv_Register_margin_top"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textSize="@dimen/tv_Register_text_size"/>

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/iv_profile"
                android:layout_width="160dp"
                android:layout_height="160dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_Register"
                app:layout_constraintStart_toStartOf="@+id/tv_Register"
                app:layout_constraintEnd_toEndOf="@+id/tv_Register"
                android:background="#808EE1"
                app:shapeAppearance= "@style/circular"
                app:strokeWidth="@dimen/iv_profile_stroke_width"
                android:padding="@dimen/iv_profile_padding"
                app:strokeColor="@color/white"
                android:layout_marginTop="@dimen/iv_profile_margin_top"
                android:src="@drawable/baseline_person_24"/>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/camera_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#BAB7BA"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/baseline_camera"
                android:tint="@color/white"
                app:layout_constraintBottom_toBottomOf="@+id/iv_profile"
                app:layout_constraintEnd_toEndOf="@+id/iv_profile" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_firstname_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
                android:layout_marginTop="@dimen/margin_top"
                android:layout_marginHorizontal="@dimen/register_margin_horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:helperTextTextColor="@color/red"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_profile"
                app:startIconDrawable="@drawable/baseline_person_24"
                app:startIconTint="@color/black">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_firstname"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:lines="@integer/lines"
                    android:paddingStart="@dimen/padding_start"
                    android:hint="@string/et_firstname_text"
                    android:inputType="textCapCharacters"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_lastname_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
                android:layout_marginTop="@dimen/margin_top"
                android:layout_marginHorizontal="@dimen/register_margin_horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:helperTextTextColor="@color/red"
                app:layout_constraintTop_toBottomOf="@+id/et_firstname_container"
                app:startIconDrawable="@drawable/baseline_person_24"
                app:startIconTint="#0E0E0E">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_lastname"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:lines="@integer/lines"
                    android:paddingStart="@dimen/padding_start"
                    android:hint="@string/et_lastname_text"
                    android:inputType="textPersonName"/>
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_phone_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
                android:layout_marginTop="@dimen/margin_top"
                android:layout_marginHorizontal="@dimen/register_margin_horizontal"
                app:counterEnabled="true"
                app:counterMaxLength="10"
                app:helperTextTextColor="@color/red"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_lastname_container"
                app:startIconDrawable="@drawable/baseline_phone"
                app:startIconTint="@color/black">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_phone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:lines="@integer/lines"
                    android:paddingStart="@dimen/padding_start"
                    android:hint="@string/et_phone_text"
                    android:inputType="number"/>
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_email_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
                android:layout_marginTop="@dimen/margin_top"
                app:helperTextTextColor="@color/red"
                android:layout_marginHorizontal="@dimen/register_margin_horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_phone_container"
                app:startIconDrawable="@drawable/baseline_mail_24"
                app:startIconTint="@color/black">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:lines="@integer/lines"
                    android:paddingStart="@dimen/padding_start"
                    android:hint="@string/et_email_text"
                    android:inputType="textEmailAddress"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/et_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/et_gender_margin_start"
                android:layout_marginTop="@dimen/et_gender_margin_top"
                android:text="@string/et_gender_text"
                android:textSize="@dimen/et_gender_text_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_email_container" />


            <RadioButton
                android:id="@+id/rb_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rb_male_text"
                android:textSize="@dimen/radio_btn_text_size"
                app:layout_constraintTop_toBottomOf="@+id/et_gender"
                app:layout_constraintStart_toStartOf="@+id/et_gender"/>

            <RadioButton
                android:id="@+id/rb_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rb_female_text"
                android:textSize="@dimen/radio_btn_text_size"
                app:layout_constraintStart_toEndOf="@+id/rb_male"
                app:layout_constraintTop_toBottomOf="@+id/et_gender"
                android:layout_marginStart="@dimen/rb_female_margin_start"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_password_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
                android:layout_marginTop="@dimen/margin_top"
                android:layout_marginHorizontal="@dimen/register_margin_horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:passwordToggleEnabled="true"
                app:helperTextTextColor="@color/red"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rb_male"
                app:startIconDrawable="@drawable/baseline_person_24"
                app:startIconTint="@color/black">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:lines="@integer/lines"
                    android:maxLength="@integer/max_length"
                    android:paddingStart="@dimen/padding_start"
                    android:hint="@string/et_password_text"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_confirm_password_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
                android:layout_marginTop="@dimen/margin_top"
                android:layout_marginHorizontal="@dimen/register_margin_horizontal"
                app:helperTextTextColor="@color/red"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_password_container"
                app:startIconDrawable="@drawable/baseline_person_24"
                app:startIconTint="@color/black">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:lines="@integer/lines"
                    android:maxLength="@integer/max_length"
                    android:paddingStart="@dimen/padding_start"
                    android:hint="@string/et_confirm_password_text"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/next_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_confirm_password_container"
                android:text="@string/next_btn_text"
                android:textColor="@color/white"
                app:cornerRadius="0dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="@dimen/margin_top"
                android:textSize="@dimen/register_next_btn_text_size"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>